Update index.html My webpage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!doctype>
 </html>
-<header>
+<head>
 <title> my first webpage<title>
+<head>
+  <body>
+    the contents go on the body
+    <body>
+      <html>
