Update index.html My webpage

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype>
 <html>
 <head>
-<title> my first webpage<title>
+<title> my first webpage <title>
 <head>
-  <body>
-    the contents go on the body
-    <body>
-      <html>
+<body>
+</p>the contents go on the body</p>
+<body>
+<html>
