--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype>
 <html>
 <head>
-<title> my first webpage <title>
-<head>
+<title> my first webpage
+</title>
 <body>
 </p>the contents go on the body</p>
-<body>
+</body>
 <html>
